@@ -1,7 +1,10 @@
 DigIt CHANGE LOG
 ======================
 
-2025/05/09 First Tests for Source Sub Items
+2025/05/12 Added Select Source sub Items in Bridge and WIA Source;
+           Added Sub Items in BuildSourcesMenu and MainForm;
+
+        09 First Tests for Source Sub Items
 
 	08 Save of Opened Session in Config File;
            Changed Default Session Path;
